feat: complete real-time library app
